--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ In particular:
 - update mapping quality (?)
 - output unmapped reads
 - custom Exception handling
+- minimum mapping quality on input.
 
 === BUGS ===
