--- a/TODO
+++ b/TODO
@@ -7,5 +7,6 @@ In particular:
 - update mapping quality (?)
 - output unmapped reads
 - custom Exception handling
+- when bounding aligniments, make sure indels are left-justified.
 
 === Known Bugs ===
