--- a/c-code/README
+++ b/c-code/README
@@ -4,8 +4,11 @@ SRMA - short read micro re-aligner
 
 1. Move into the c-code sub-directory.
 
-2. Download the latest samtools from http://samtools.sf.net 
+2.a Download the latest samtools from http://samtools.sf.net 
 and rename the directory to 'samtools' (no quotes).
+
+2.b Move into the 'samtools' directory and type 'make' 
+(no quotes), then move back up to the c-code directory.
 
 3. Run:
  sh autogen.sh && ./configure && make
